# SwarmRunner

./: Experiment.py  README.md  Runner.py  SRDataParser.py  SwarmRunner.py  config_file.json  utils.py
ArgosLogger/: CMakeLists.txt
ArgosLogger/src/: ArgosLoggerMain.cpp  CMakeLists.txt
ArgosLogger/src/cmake/: ARGoSBuildChecks.cmake
ArgosLogger/src/utility/: DataCollector.cpp  DataCollector.h
ArgosLogger/src/utility/loggers/: BasicLoggers.cpp  BasicLoggers.h  DataLogger.h  DataLoggerFactory.cpp  DataLoggerFactory.h  SwarmMetricsLoggers.cpp  SwarmMetricsLoggers.h
Experiment/: example_argos_file.argos  example_argos_file_vis.argos
Experiment/chocolate/: scenario.txt  target-runner
Experiment/evoStick/: evostickParams.ne
Experiment/experiments/: example_aggregation.argos
Experiment/irace/: controllers.xml  new_grammar.txt  scenario.txt
Experiment/neat/: controllers.xml  evostickParams.ne
controllers/: automode_controller.xml  neat_controller.xml
visualisation_examples/: VisualisePositions.py  VisualiseScore.py
